--- a/index.html
+++ b/index.html
@@ -207,6 +207,14 @@
                 <li><a href="#"><img src="assets/img/linkedin.svg" alt=""></a></li>
                 <li><a href="#"><img src="assets/img/whats.svg" alt=""></a></li>
             </ul>
+
+        </div>
+        <div class="copy">
+            <p>Bryan Soares, Desenvolvedor Front-End</p>
+            <p>Tecnologias utilizadas: Javascript, HTML e CSS</p>
+            <p>Todos os direitos reservados &copy;</p>
+
+
         </div>
 
     </footer>
